--- a/Supporting Files/Info.plist
+++ b/Supporting Files/Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>In order to show the stores, we need your location.</string>
 </dict>
 </plist>
